Mushroom boss level layout tweaks.

--- a/data/level/Forest/mushroom-boss.cfg
+++ b/data/level/Forest/mushroom-boss.cfg
@@ -660,6 +660,178 @@
 			"type": "mushroom_walker_spawner",
 			"x": 709,
 			"y": -1158
+		},
+		{
+			"_uuid": "e52e4e9163334587b44072dd8f6d1c93",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_e2e7a44",
+			"type": "forest_house_walkway_angled",
+			"x": 134,
+			"y": 111
+		},
+		{
+			"_uuid": "5073270a70ff4e11bf20ec0ef14785a7",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_9e539bc",
+			"type": "forest_house_walkway_angled2",
+			"x": 451,
+			"y": -398
+		},
+		{
+			"_uuid": "2fcf35a0a0ab41a5843889ba14fc5550",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_4ba07fc3",
+			"type": "forest_house_walkway_angled2",
+			"x": 175,
+			"y": -589
+		},
+		{
+			"_uuid": "cc71eb68b96846bda17131621f6fe8c6",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_264f901b",
+			"type": "scaffolding_platform1",
+			"x": 516,
+			"y": -559
+		},
+		{
+			"_uuid": "cb6c7c83c263422faa56d39945e20d03",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_5ad8efa4",
+			"type": "scaffolding_platform3",
+			"x": 392,
+			"y": 340
+		},
+		{
+			"_uuid": "bda9d13ec15c48b28790400e849825e2",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_749abab3",
+			"type": "scaffolding_platform2",
+			"x": 325,
+			"y": 359
+		},
+		{
+			"_uuid": "5a522c173e9445f5ac213b14b1886d18",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_103c341",
+			"type": "scaffolding_platform3",
+			"x": 248,
+			"y": 364
+		},
+		{
+			"_uuid": "f292b9b234994df3a253d4ab3aa8bc12",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_2f1e3703",
+			"type": "scaffolding_board1",
+			"x": 446,
+			"y": 348
+		},
+		{
+			"_uuid": "33255df485584ab49b27074c7455a82e",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_516d24c3",
+			"type": "scaffolding_platform1",
+			"x": 516,
+			"y": 153
+		},
+		{
+			"_uuid": "cccb024d7c034f1da38677ce67c892b2",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_64ad011c",
+			"type": "scaffolding_board5",
+			"x": 589,
+			"y": 188
+		},
+		{
+			"_uuid": "c998481e76bb4008b5b243fc3658b2fc",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_247dfc3b",
+			"type": "scaffolding_platform4",
+			"x": 824,
+			"y": 349
+		},
+		{
+			"_uuid": "e84f809163204549b5e89df772e03c49",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_3e9d3028",
+			"type": "scaffolding_platform1",
+			"x": 1164,
+			"y": 359
+		},
+		{
+			"_uuid": "ce6f4e6a4a884d9b8e53fec80a6aedaf",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_1e671228",
+			"type": "scaffolding_board1",
+			"x": 1126,
+			"y": 372
+		},
+		{
+			"_uuid": "847190f67c1840a7b60e00431a1ca81e",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_3b505105",
+			"type": "scaffolding_platform6",
+			"x": 878,
+			"y": 165
+		},
+		{
+			"_uuid": "9a90604d06e24591ac96aa2acdc16c9e",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_364a84cb",
+			"type": "scaffolding_platform7",
+			"x": 1108,
+			"y": 71
+		},
+		{
+			"_uuid": "8d992b27f4374f9f9c89dd3e3ca310a9",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_838c98d",
+			"type": "scaffolding_platform8",
+			"x": 1256,
+			"y": -90
+		},
+		{
+			"_uuid": "95ba4606360341739f2bfbf48193d059",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_73b9e252",
+			"type": "scaffolding_platform3",
+			"x": 1344,
+			"y": -109
+		},
+		{
+			"_uuid": "e64d867b035d4bf4b0a9964b08b84248",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_2a22831",
+			"type": "scaffolding_platform1",
+			"x": 983,
+			"y": -245
 		}
 	],
 	"dimensions": [-704,-1248,2527,1215],
@@ -676,6 +848,27 @@
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "background_parallax_objects"
+		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr
@@ -936,7 +1129,7 @@ frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,
 			"zorder": "exterior_solid_ground_tiles"
 		},
 		{
-			"tiles": ",,,,,,,,,,,,,,,,,,,fbr,fbr,fbr,,,fbr,fbr,fbr,fbr,fbr,,,,,,fbr,fbr,fbr,,,,,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr
+			"tiles": ",,,,,,,,,,,,,,,,fbr,fbr,fbr,fbr,fbr,fbr,,,fbr,fbr,fbr,fbr,fbr,,,,,,fbr,fbr,fbr,,,,,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr
 ,,,,,,,,,,,,,,,,,,,,,,fbr,fbr,,,,,,,,,,,,,,fbr,fbr,fbr,fbr
 ,
 ,
@@ -963,9 +1156,9 @@ fbr,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,,,fbr,,,,,,,,fbr,fbr
 ,
 ,
-,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr,fbr,,,,,,,,,,,,,fbr,fbr,fbr,fbr
-,
-,
+,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr,fbr,,,,,,,,,,,,,,,fbr,fbr
+,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr,,,,fbr,fbr,fbr,fbr,,,fbr,fbr,fbr,fbr,,,fbr,fbr,,,fbr,fbr
+,,,,,,,,,,,,,,,,fbr,fbr,fbr,fbr,fbr,fbr,fbr,,,,,,,,,fbr,,,fbr,,,,fbr,fbr,,,,,,,fbr,fbr
 ,
 ,
 ,
@@ -996,7 +1189,122 @@ fbr,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
+			"zorder": "rail_tracks"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
 			"zorder": "player"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "wooden_platform_objects"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_decor"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": -1
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "player"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "wooden_scaffolding_foreground"
 		},
 		{
 			"tiles": ",
@@ -1046,6 +1354,48 @@ fbr,
 			"y": -384,
 			"y_speed": 100,
 			"zorder": "mushrooms_foreground"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "foreground_parallax_objects"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Grisly Grotto",
