Added a ticking countdown timer to the bombardier mushroom.

--- a/data/objects/enemies/mushrooms/mushroom_bombardier.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_bombardier.cfg
@@ -50,10 +50,25 @@ properties: {
 
 	process_fuse_burn: "commands :: if(is_on_fire, [
 		set(explosion_timer, explosion_timer - 1),
+		process_timer_display,
 		if(explosion_timer <= 0, 
 			force_death(enum fire)
 		),
 	])",
+
+	process_timer_display: "commands :: [
+		if(timer_value % (time_before_exploding/5) = 0,
+			[
+				spawn('text_flash',midpoint_x,midpoint_y-20,{ txt: '' + ceil(timer_value/divisor), font: 'white_outline' }),
+				flash_very_bright,
+				schedule(1, flash_off)
+			]
+		)	
+	]
+		where timer_value = explosion_timer
+		where divisor = (time_before_exploding/5.0)
+		where time_before_exploding = 400
+	",
 	
 	
 	handle_special_damage_response: "def(DamageType damage_type, int final_damage_amount, bool will_die) -> commands [
