Added a much bigger explosion so we can actually hit the mushroom boss heads with it.

--- a/data/objects/enemies/mushrooms/mushroom_bombardier.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_bombardier.cfg
@@ -59,7 +59,7 @@ properties: {
 	process_timer_display: "commands :: [
 		if(timer_value % (time_before_exploding/5) = 0,
 			[
-				spawn('text_flash',midpoint_x,midpoint_y-20,{ txt: '' + ceil(timer_value/divisor), font: 'white_outline' }),
+				spawn('text_flash',midpoint_x,midpoint_y-40,{ txt: '' + ceil(timer_value/divisor), font: 'white_outline' }),
 				flash_very_bright,
 				schedule(1, flash_off)
 			]
@@ -81,7 +81,7 @@ properties: {
 	]",
 	
 	death_effects: "def(string type) -> commands [
-		spawn('explosion_huge_harmful',midpoint_x,midpoint_y,facing),
+		spawn('explosion_enormous_harmful',midpoint_x,midpoint_y,facing),
 		sound('BombExplode.wav'),	
 	]",
 },
