Adjusted the hitbox on the enormous explosion.

--- a/data/objects/effects/puffs/explosion_enormous_harmful.cfg
+++ b/data/objects/effects/puffs/explosion_enormous_harmful.cfg
@@ -46,13 +46,13 @@ animation: [
 		image: "effects/explosion4.png",
 		feet_x: 32,
 		feet_y: 32,
-		attack_area: [-32,-32,96,96,"solid"],
+		attack_area: [-80,-80,144,144,"solid"], //32 ± 112
 		body_area: "all",
 		id: "normal",
 		rect: [0,32,63,96],
 		frames_per_row: 1,
 		frames: 2,
-		duration: 2,
+		duration: 20,
 		reverse: true,
 		no_remove_alpha_borders: true,
 	},
