Fixed the thing that was causing the mushroom boss to take no damage from the bombs.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -62,7 +62,13 @@ properties: {
 
 		controller_obj: "(obj mushroom_boss.controller <- filter(level.chars, value.type = 'mushroom_boss.controller')[0])",
 									
+/*
+		We're ditching this whole thing.
+		
+		Originally the boss was designed with this idea that in certain attack modes, it would "shield up" and avoid taking damage, but the whole idea is being scrapped.  It's saved here for posterity.
+		
 		is_invincible: "bool :: ((not me.animation = 'chargeup') or proto_conds) where proto_conds = (bool(invincible) or level.in_dialog or is_invincible_posthit)",
+*/
 
 		play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands if(damage_amount > 0, sound('mushroom-boss-hurt.wav'), sound('mushroom-boss-resist.wav'))",
 									
@@ -177,127 +183,127 @@ properties: {
 			) ",
 
 	animation: [
-	{
-		"@base": true,
-		image: "enemies/mushroom-boss1.png",
-		palettes: "@include data/palettes.cfg:forest_palettes",
-		feet_x: 80,
-		attack_area: [0,60,159,159],
-		body_area: "all",
-	},
-	{
-		id: "normal",
-		rect: [0,0,159,159],
-		frames:5,
-		reverse: true,
-		duration: 3,
-		feet_y: 160,
-	},
-	{
-		id: "chargeup",
-		image: "enemies/mushroom-boss2.png",
-		rect: [0,0,159,175],
-		frames:5,
-		reverse: true,
-		duration: 3,
-		feet_y: 176,
-		attack_area: [0,76,159,176],
-	},
-	{
-		id: "attack_homing",
-		image: "enemies/mushroom-boss3.png",
-		rect: [0,0,159,175],
-		frames:4,
-		frames_per_row:2,
-		reverse: true,
-		duration: 3,
-		feet_y: 176,
-		events: "6:shoot",
-		attack_area: [0,76,159,176],
-	},
-	{
-		id: "attack_spawn",
-		image: "enemies/mushroom-boss3.png",
-		rect: [0,0,159,175],
-		frames:4,
-		frames_per_row:2,
-		reverse: true,
-		duration: 3,
-		feet_y: 176,
-		events: "6:spawn_baby",
-		attack_area: [0,76,159,176],
-	},
-	{
-		id: "attack_stream",
-		image: "enemies/mushroom-boss3.png",
-		rect: [0,0,159,175],
-		frames:4,
-		frames_per_row:2,
-		reverse: true,
-		duration: 3,
-		feet_y: 176,
-		attack_area: [0,76,159,176],
-	},
-	{
-		id: "spit",
-		image: "enemies/mushroom-boss3.png",
-		rect: [0,0,159,175],
-		frames:4,
-		frames_per_row:2,
-		reverse: true,
-		duration: 3,
-		feet_y: 176,
-		attack_area: [0,76,159,176],
-	},
-	{
-		id: "enter_guard",
-		image: "enemies/mushroom-boss4.png",
-		rect: [0,0,159,159],
-		frames:4,
-		frames_per_row: 2,
-		duration: 6,
-		feet_y: 160,
-	},
-	{
-		id: "exit_guard",
-		image: "enemies/mushroom-boss4.png",
-		rect: [0,0,159,159],
-		frames:4,
-		frames_per_row: 2,
-		play_backwards: true,
-		duration: 6,
-		feet_y: 160,
-	},
-	{
-		id: "guard",
-		image: "enemies/mushroom-boss4.png",
-		rect: [160,160,319,319],
-		frames:1,
-		play_backwards: true,
-		duration: 20,
-		feet_y: 160,
-	},
-	{
-		id: "sprout",
-		image: "enemies/mushroom-boss5.png",
-		rect: [0,0,159,159],
-		frames:1,
-		duration: 100000,
-		feet_y: 160,
-	},
-	{
-		id: "exit_sprout",
-		image: "enemies/mushroom-boss4.png",
-		rect: [0,0,159,159],
-		frames:4,
-		frames_per_row: 2,
-		play_backwards: true,
-		duration: 20,
-		feet_y: 160,
-	},
-],
+		{
+			"@base": true,
+			image: "enemies/mushroom-boss1.png",
+			palettes: "@include data/palettes.cfg:forest_palettes",
+			feet_x: 80,
+			attack_area: [0,60,159,159],
+			body_area: "all",
+		},
+		{
+			id: "normal",
+			rect: [0,0,159,159],
+			frames:5,
+			reverse: true,
+			duration: 3,
+			feet_y: 160,
+		},
+		{
+			id: "chargeup",
+			image: "enemies/mushroom-boss2.png",
+			rect: [0,0,159,175],
+			frames:5,
+			reverse: true,
+			duration: 3,
+			feet_y: 176,
+			attack_area: [0,76,159,176],
+		},
+		{
+			id: "attack_homing",
+			image: "enemies/mushroom-boss3.png",
+			rect: [0,0,159,175],
+			frames:4,
+			frames_per_row:2,
+			reverse: true,
+			duration: 3,
+			feet_y: 176,
+			events: "6:shoot",
+			attack_area: [0,76,159,176],
+		},
+		{
+			id: "attack_spawn",
+			image: "enemies/mushroom-boss3.png",
+			rect: [0,0,159,175],
+			frames:4,
+			frames_per_row:2,
+			reverse: true,
+			duration: 3,
+			feet_y: 176,
+			events: "6:spawn_baby",
+			attack_area: [0,76,159,176],
+		},
+		{
+			id: "attack_stream",
+			image: "enemies/mushroom-boss3.png",
+			rect: [0,0,159,175],
+			frames:4,
+			frames_per_row:2,
+			reverse: true,
+			duration: 3,
+			feet_y: 176,
+			attack_area: [0,76,159,176],
+		},
+		{
+			id: "spit",
+			image: "enemies/mushroom-boss3.png",
+			rect: [0,0,159,175],
+			frames:4,
+			frames_per_row:2,
+			reverse: true,
+			duration: 3,
+			feet_y: 176,
+			attack_area: [0,76,159,176],
+		},
+		{
+			id: "enter_guard",
+			image: "enemies/mushroom-boss4.png",
+			rect: [0,0,159,159],
+			frames:4,
+			frames_per_row: 2,
+			duration: 6,
+			feet_y: 160,
+		},
+		{
+			id: "exit_guard",
+			image: "enemies/mushroom-boss4.png",
+			rect: [0,0,159,159],
+			frames:4,
+			frames_per_row: 2,
+			play_backwards: true,
+			duration: 6,
+			feet_y: 160,
+		},
+		{
+			id: "guard",
+			image: "enemies/mushroom-boss4.png",
+			rect: [160,160,319,319],
+			frames:1,
+			play_backwards: true,
+			duration: 20,
+			feet_y: 160,
+		},
+		{
+			id: "sprout",
+			image: "enemies/mushroom-boss5.png",
+			rect: [0,0,159,159],
+			frames:1,
+			duration: 100000,
+			feet_y: 160,
+		},
+		{
+			id: "exit_sprout",
+			image: "enemies/mushroom-boss4.png",
+			rect: [0,0,159,159],
+			frames:4,
+			frames_per_row: 2,
+			play_backwards: true,
+			duration: 20,
+			feet_y: 160,
+		},
+	],
 
-object_type: [ {
+	object_type: [ {
 		id: "controller",
 		always_active: true,
 		hitpoints: 1,
@@ -306,33 +312,34 @@ object_type: [ {
 
 
 		on_begin_fight: "if(not _fight_started, [
-							[
-								[set(value.alpha, 255) | value <- level.chars, value.type = 'forest_blockage1'],
-								set_solid(-704, -192, -576, -32, true),
-								set_solid(2304, -320, 2496, -192, true),
-							
-								title('FIGHT!',200),
-								lib.audio.play_music(me,'MushroomBossIntro.ogg'),
-								set(_fight_started, true),
-							
-								trigger_initial_behavior,
-								map(stalks, fire_event(value,'sprout'))
-							],
-							[
-								set(me.is_a_boss, true)
-								;
-								me.constructor
-								/*
-									Specifically fire the constructor here after setting `is_a_boss`.  For perf reasons, we stopped polling the level to see if there are new bosses.  Rather, we just poll the current ones that are registered to see if they've died.  Objects register themselves as bosses as they're constructed, because 99% of the time they're not resident on the level until the fight starts.
-								*/
-							]
-						])",
+			[
+				[set(value.alpha, 255) | value <- level.chars, value.type = 'forest_blockage1'],
+				set_solid(-704, -192, -576, -32, true),
+				set_solid(2304, -320, 2496, -192, true),
+			
+				title('FIGHT!',200),
+				lib.audio.play_music(me,'MushroomBossIntro.ogg'),
+				set(_fight_started, true),
+			
+				trigger_initial_behavior,
+				map(stalks, fire_event(value,'sprout'))
+			],
+			[
+				set(me.is_a_boss, true)
+				;
+				me.constructor
+				/*
+					Specifically fire the constructor here after setting `is_a_boss`.  For perf reasons, we stopped polling the level to see if there are new bosses.  Rather, we just poll the current ones that are registered to see if they've died.  Objects register themselves as bosses as they're constructed, because 99% of the time they're not resident on the level until the fight starts.
+				*/
+			]
+		])",
 		
-		on_postfight_outro: "schedule(500,[	set(hitpoints,1),
-								set(invincible, -1),
-								frogatto.do_post_victory_transport('relative-respite.cfg', 'target'),
-								frogatto.store_event('mushroom_boss_fight_won',1)
-								]) where frogatto = (obj frogatto_playable <- level.player)",
+		on_postfight_outro: "schedule(500, [
+			set(hitpoints,1),
+			set(invincible, -1),
+			frogatto.do_post_victory_transport('relative-respite.cfg', 'target'),
+			frogatto.store_event('mushroom_boss_fight_won',1)
+		]) where frogatto = (obj frogatto_playable <- level.player)",
 		on_die: "[set(hitpoints,1),set(me.is_a_boss, false)]",
 
 		on_process: "process_behavior",
