Only spawn the mushroom mooks whilst the boss is active.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -322,7 +322,8 @@ properties: {
 				set(_fight_started, true),
 			
 				trigger_initial_behavior,
-				map(stalks, fire_event(value,'sprout'))
+				map(stalks, fire_event(value,'sprout')),
+				set(_mook_spawner.spawning_active, true),
 			],
 			[
 				set(me.is_a_boss, true)
@@ -334,12 +335,15 @@ properties: {
 			]
 		])",
 		
-		on_postfight_outro: "schedule(500, [
-			set(hitpoints,1),
-			set(invincible, -1),
-			frogatto.do_post_victory_transport('relative-respite.cfg', 'target'),
-			frogatto.store_event('mushroom_boss_fight_won',1)
-		]) where frogatto = (obj frogatto_playable <- level.player)",
+		on_postfight_outro: "[
+			set(_mook_spawner.spawning_active, false),
+			schedule(500, [
+				set(hitpoints,1),
+				set(invincible, -1),
+				frogatto.do_post_victory_transport('relative-respite.cfg', 'target'),
+				frogatto.store_event('mushroom_boss_fight_won',1)
+			])
+		] where frogatto = (obj frogatto_playable <- level.player)",
 		on_die: "[set(hitpoints,1),set(me.is_a_boss, false)]",
 
 		on_process: "process_behavior",
@@ -386,6 +390,7 @@ properties: {
 			_phase_started_at: { type: "int", init: "0", persistent: false },
 			_current_phase_random_timer: { type: "int", init: "0", persistent: false },
 			_state: { type: "MushroomBossBehaviorModeTypes", init: "enum idle", persistent: false },
+			_mook_spawner: "find_or_die(level.chars, value is obj mushroom_walker_spawner)",
 
 		#-------------------------- custom death logic --------------------------#
 			handle_death: "def(interface {damage_type: DamageType} collide_with) -> commands
