--- a/data/objects/enemies/mushrooms/mushroom_walker_spawner.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_walker_spawner.cfg
@@ -21,7 +21,7 @@ properties: {
 
 #-------------------------- vars --------------------------#
 	_spawn_countup: { type: "int", default: 0, persistent: false },
-
+	spawning_active: { type: "bool", default: false },
 
 #-------------------------- spawn controls --------------------------#
 	max_objects: "10",
@@ -34,7 +34,7 @@ properties: {
 
 
 #-------------------------- override logic --------------------------#
-	do_spawning_logic: "commands :: [
+	do_spawning_logic: "commands :: if(spawning_active, [
 		add(_spawn_countup, 1),
 		if(_spawn_countup >= spawn_frequency,
 			[
@@ -50,7 +50,7 @@ properties: {
 				)
 			]
 		)
-	]",
+	])",
 
 
 
