Adding in some scaffolding for a new attack mode that makes the boss fire off (what will be) seekers that do a horizontal rush across the level.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -384,7 +384,7 @@ properties: {
 		#--------------------------  vars --------------------------#
 			_has_died: { type: "bool", default: false, persistent: false },
 			_fight_started: { type: "bool", default: false, persistent: false },
-			_behavior_mode_prng:	{ type: "class pseudo_random_numbers", init: "construct('pseudo_random_numbers',{_size_of_pool:3, _pool_size_multiplier: 1})", persistent: false },
+			_behavior_mode_prng:	{ type: "class pseudo_random_numbers", init: "construct('pseudo_random_numbers',{_size_of_pool:4, _pool_size_multiplier: 1})", persistent: false },
 
 
 			_phase_started_at: { type: "int", init: "0", persistent: false },
@@ -474,6 +474,7 @@ properties: {
 											enum spawn_acid_rain_glob,		process_spawn_acid_rain_glob,
 											enum spore_cloud_setup,			process_spore_cloud_setup,
 											enum spore_cloud_emit,			process_spore_cloud,
+											enum horizontal_seeker_attack,	process_horizontal_seeker_attack,
 											enum bomber_shroom_drop, 		null,
 											enum idle,						null
 										),
@@ -484,7 +485,8 @@ properties: {
  											switch(_behavior_mode_prng.get_next_value,
  												0, ;	begin_spawn_acid_rain_glob,
  												1, ;	begin_spore_cloud_setup,
- 												2, ;	begin_spawn_acid_rain_glob, //begin_bomber_shroom_drop,
+ 												2, ;	begin_horizontal_seeker_attack,
+ 												3, ;	begin_spawn_acid_rain_glob, //begin_bomber_shroom_drop,
  											),
 											_behavior_mode_prng.iterate_random_pool,
 											; set(_phase_started_at, cycle)
@@ -533,8 +535,30 @@ properties: {
 			]),
 			do_after_phase_timer( pick_random_behavior )
 		]",
-	
-	
+
+#-------------------------- horizontal-seeker attack --------------------------#
+	/*
+		In this mode, the upper two heads drop down some flying creatures that drop down to a certain horizontal level, and then rapidly fly horizontally across the level.
+	*/
+
+	//this is really a one-step process, because the seekers themselves pretty much handle their movements
+		begin_horizontal_seeker_attack: "commands :: [
+			mb_clear,
+			mb_debug('MODE: begin_horizontal_seeker_attack'),		
+			set(_state, enum horizontal_seeker_attack),
+			set(_chosen_head, an_upper_stalk)  //TODO:  do both of these as discrete right/left
+			;
+			debug_head_choice(_chosen_head),
+
+			set(_current_phase_random_timer, 100 ),
+		]",
+		
+		process_horizontal_seeker_attack: "commands :: [
+			if(cycle - _phase_started_at = 50,
+				spawn('mushroom_boss.seeker_projectile', _chosen_head.x, _chosen_head.y, facing)
+			),
+		]",
+			
 		
 #-------------------------- spore-cloud attack --------------------------#
 	/*
@@ -629,6 +653,7 @@ properties: {
 				spawn_acid_rain_glob,
 				spore_cloud_setup,
 				spore_cloud_emit,
+				horizontal_seeker_attack,
 				bomber_shroom_drop,
 				idle,
 			}",
@@ -643,6 +668,13 @@ properties: {
 		},
 		
 	},
+	{
+		id: "seeker_projectile",
+		always_active: true,
+		
+		on_create: "set(velocity_y, 80)",
+	},
+	
 	{
 		id: "stream_shot",
 		always_active: true,
