Set up tiered spawn logic to have the seekers come out in sequence and move at different heights.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -376,7 +376,7 @@ properties: {
 			hurt_velocity_x: 0,
 
 		#-------------------------- helpers --------------------------#
-			mb_debug_active: "bool :: false",
+			mb_debug_active: "bool :: true",
 			mb_clear: "commands :: null", //"if(mb_debug_active, clear())",
 			mb_debug: "def(value) -> commands if(mb_debug_active, debug(value))",
 
@@ -540,6 +540,14 @@ properties: {
 	/*
 		In this mode, the upper two heads drop down some flying creatures that drop down to a certain horizontal level, and then rapidly fly horizontally across the level.
 	*/
+	
+		seeker_heights: "[int] :: [
+			-534,
+			-312,
+			-120,
+			170,
+			394
+		]",
 
 	//this is really a one-step process, because the seekers themselves pretty much handle their movements
 		begin_horizontal_seeker_attack: "commands :: [
@@ -550,15 +558,22 @@ properties: {
 			;
 			debug_head_choice(_chosen_head),
 
-			set(_current_phase_random_timer, 100 ),
+			set(_current_phase_random_timer, size(seeker_heights) * 50 + 100 ),
 		]",
 		
-		process_horizontal_seeker_attack: "commands :: [
-			if(cycle - _phase_started_at = 50,
-				spawn('mushroom_boss.seeker_projectile', _chosen_head.x, _chosen_head.y, facing)
-			),
-		]",
-			
+		process_horizontal_seeker_attack: "commands :: 
+			map(seeker_heights, conditional_seeker_spawn(index, value))
+		",
+		
+		conditional_seeker_spawn: "def(int spawn_index, int spawn_height) -> commands
+			if(cycle - _phase_started_at = 50 * spawn_index,
+				spawn('mushroom_boss.seeker_projectile', _chosen_head.mid_x, _chosen_head.mid_y, facing, [
+					child.fly_to([
+						{x: _chosen_head.mid_x, y: spawn_height},
+					], def() child.fly_to_obj(level.player) )
+				])
+			)
+		",			
 		
 #-------------------------- spore-cloud attack --------------------------#
 	/*
@@ -670,9 +685,30 @@ properties: {
 	},
 	{
 		id: "seeker_projectile",
+		prototype: ["seeker_flying"],
 		always_active: true,
+
+		properties: {
+			#-------------------------- core processing --------------------------#
+			handle_specialized_creature_category_processing: "commands :: [
+
+					set(rotate, sin(cycle*7) * 4.0)
+			]",
+		},
 		
 		on_create: "set(velocity_y, 80)",
+		
+		animation: [{
+			id: "fly",
+			image: "effects/particles.png",
+			x: 86, y: 73, w: 28, h: 28,
+			duration: -1,
+		}, {
+			id: "turn",
+			image: "effects/particles.png",
+			x: 86, y: 73, w: 28, h: 28,
+			duration: -1,
+		}],
 	},
 	
 	{
