Got the horizontal seeking motion working correctly for one direction.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -414,6 +414,10 @@ properties: {
 			
 			an_upper_stalk: "obj mushroom_boss :: shuffle(upper_stalks)[0]",
 			any_stalk: "obj mushroom_boss :: shuffle(stalks)[0]",
+			
+			upper_right_stalk: "obj mushroom_boss :: find_or_die(right_stalks, value in upper_stalks)",
+			upper_left_stalk: "obj mushroom_boss :: find_or_die(left_stalks, value in upper_stalks)",
+			
 		
 			all_the_other_stalks: "def(obj mushroom_boss this_one) -> [obj mushroom_boss]  filter(stalks, value != this_one)",
 
@@ -554,10 +558,7 @@ properties: {
 			mb_clear,
 			mb_debug('MODE: begin_horizontal_seeker_attack'),		
 			set(_state, enum horizontal_seeker_attack),
-			set(_chosen_head, an_upper_stalk)  //TODO:  do both of these as discrete right/left
 			;
-			debug_head_choice(_chosen_head),
-
 			set(_current_phase_random_timer, size(seeker_heights) * 50 + 100 ),
 		]",
 		
@@ -566,11 +567,14 @@ properties: {
 		",
 		
 		conditional_seeker_spawn: "def(int spawn_index, int spawn_height) -> commands
-			if(cycle - _phase_started_at = 50 * spawn_index,
-				spawn('mushroom_boss.seeker_projectile', _chosen_head.mid_x, _chosen_head.mid_y, facing, [
+			if(cycle - _phase_started_at = 50 * (spawn_index + 1),
+				spawn('mushroom_boss.seeker_projectile', upper_right_stalk.mid_x, upper_right_stalk.mid_y, facing, [
 					child.fly_to([
-						{x: _chosen_head.mid_x, y: spawn_height},
-					], def() child.fly_to_obj(level.player) )
+							{x: upper_right_stalk.mid_x, y: spawn_height},
+						], def() child.fly_to([
+							{x: upper_left_stalk.mid_x, y: spawn_height}
+						])
+					)
 				])
 			)
 		",			
@@ -687,6 +691,7 @@ properties: {
 		id: "seeker_projectile",
 		prototype: ["seeker_flying"],
 		always_active: true,
+		solid_area: null,
 
 		properties: {
 			#-------------------------- core processing --------------------------#
@@ -695,8 +700,6 @@ properties: {
 					set(rotate, sin(cycle*7) * 4.0)
 			]",
 		},
-		
-		on_create: "set(velocity_y, 80)",
 		
 		animation: [{
 			id: "fly",
