Gave the mushroom boss's sweep attack proper graphics and particles.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -573,7 +573,8 @@ properties: {
 							{x: upper_right_stalk.mid_x, y: spawn_height},
 						], def() child.fly_to([
 							{x: upper_left_stalk.mid_x, y: spawn_height}
-						])
+						], def() child.force_death() 
+						)
 					)
 				])
 			)
@@ -694,23 +695,42 @@ properties: {
 		solid_area: null,
 
 		properties: {
+			death_effects: "def(string type) -> commands [
+				play_death_effects('acid', enum small),
+				spawn('explosion_acid_big', mid_x, mid_y, 1),
+			]",
+
 			#-------------------------- core processing --------------------------#
 			handle_specialized_creature_category_processing: "commands :: [
 
 					set(rotate, sin(cycle*7) * 4.0)
 			]",
 		},
+
+		on_create: "[
+			spawn('legacy_particle_attache', mid_x, mid_y, {
+				_particle_type: 'acid_shot_contrail',
+				parent: me,
+				time_to_die: 150,
+				zsub_order: -1
+			}),
+		]",
+
 		
 		animation: [{
+			"@base": true,
+			image: "effects/particles5.png",
+			rect: [289,161,317,189],
+			pad: 3,
+			attack_area: "all",
+		},{
 			id: "fly",
-			image: "effects/particles.png",
-			x: 86, y: 73, w: 28, h: 28,
-			duration: -1,
+			frames: 7,
+			duration: 2,
 		}, {
 			id: "turn",
-			image: "effects/particles.png",
-			x: 86, y: 73, w: 28, h: 28,
-			duration: -1,
+			frames: 1,
+			duration: 2,
 		}],
 	},
 	
