Added logic to find a rotated position for the mushroom boss's spout, so shots can come out of it.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -399,6 +399,14 @@ properties: {
 			
 			clear_dangerous_items: "[remove_object(value) | value <- level.chars, value.type in ['mushroom_boss.big_shot','mushroom_boss.stream_shot', 'mushroom_jellyfish']]",
 
+		#-------------------------- positioning logic --------------------------#
+			spout_position: "def(obj mushroom_boss head) -> {x: int, y: int}
+			{
+				x: lib.math.round(head.mid_x + cos(angle) * distance),
+				y: lib.math.round(head.mid_y + sin(angle) * distance)
+			} where distance = 190
+			  where angle = head.rotate - 90",
+
 		#-------------------------- selectors for the heads/stalks --------------------------#
 			stalks: "[obj mushroom_boss] <- filter(level.chars, value.type = 'mushroom_boss')",
 
@@ -486,7 +494,7 @@ properties: {
 									]",
 													
 	pick_random_behavior: "commands :: [
- 											switch(_behavior_mode_prng.get_next_value,
+ 											switch(2, //_behavior_mode_prng.get_next_value,
  												0, ;	begin_spawn_acid_rain_glob,
  												1, ;	begin_spore_cloud_setup,
  												2, ;	begin_horizontal_seeker_attack,
@@ -547,7 +555,7 @@ properties: {
 	
 		seeker_heights: "[int] :: [
 			-534,
-			-312,
+			-324,
 			-120,
 			170,
 			394
@@ -568,11 +576,11 @@ properties: {
 		
 		conditional_seeker_spawn: "def(int spawn_index, int spawn_height) -> commands
 			if(cycle - _phase_started_at = 50 * (spawn_index + 1),
-				spawn('mushroom_boss.seeker_projectile', upper_right_stalk.mid_x, upper_right_stalk.mid_y, facing, [
+				spawn('mushroom_boss.seeker_projectile', spout_position(upper_right_stalk).x, spout_position(upper_right_stalk).y, facing, [
 					child.fly_to([
-							{x: upper_right_stalk.mid_x, y: spawn_height},
+							{x: spout_position(upper_right_stalk).x, y: spawn_height},
 						], def() child.fly_to([
-							{x: upper_left_stalk.mid_x, y: spawn_height}
+							{x: spout_position(upper_left_stalk).x, y: spawn_height}
 						], def() child.force_death() 
 						)
 					)
