Made the sweeper attack not drop rewards.  Also renamed all references so we don't call it seeker anywhere.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -486,7 +486,7 @@ properties: {
 											enum spawn_acid_rain_glob,		process_spawn_acid_rain_glob,
 											enum spore_cloud_setup,			process_spore_cloud_setup,
 											enum spore_cloud_emit,			process_spore_cloud,
-											enum horizontal_seeker_attack,	process_horizontal_seeker_attack,
+											enum horizontal_sweeper_attack,	process_horizontal_sweeper_attack,
 											enum bomber_shroom_drop, 		null,
 											enum idle,						null
 										),
@@ -497,7 +497,7 @@ properties: {
  											switch(2, //_behavior_mode_prng.get_next_value,
  												0, ;	begin_spawn_acid_rain_glob,
  												1, ;	begin_spore_cloud_setup,
- 												2, ;	begin_horizontal_seeker_attack,
+ 												2, ;	begin_horizontal_sweeper_attack,
  												3, ;	begin_spawn_acid_rain_glob, //begin_bomber_shroom_drop,
  											),
 											_behavior_mode_prng.iterate_random_pool,
@@ -548,7 +548,7 @@ properties: {
 			do_after_phase_timer( pick_random_behavior )
 		]",
 
-#-------------------------- horizontal-seeker attack --------------------------#
+#-------------------------- horizontal-sweeper attack --------------------------#
 	/*
 		In this mode, the upper two heads drop down some flying creatures that drop down to a certain horizontal level, and then rapidly fly horizontally across the level.
 	*/
@@ -562,21 +562,21 @@ properties: {
 		]",
 
 	//this is really a one-step process, because the seekers themselves pretty much handle their movements
-		begin_horizontal_seeker_attack: "commands :: [
+		begin_horizontal_sweeper_attack: "commands :: [
 			mb_clear,
-			mb_debug('MODE: begin_horizontal_seeker_attack'),		
-			set(_state, enum horizontal_seeker_attack),
+			mb_debug('MODE: begin_horizontal_sweeper_attack'),		
+			set(_state, enum horizontal_sweeper_attack),
 			;
 			set(_current_phase_random_timer, size(seeker_heights) * 50 + 100 ),
 		]",
 		
-		process_horizontal_seeker_attack: "commands :: 
-			map(seeker_heights, conditional_seeker_spawn(index, value))
+		process_horizontal_sweeper_attack: "commands :: 
+			map(seeker_heights, conditional_sweeper_spawn(index, value))
 		",
 		
-		conditional_seeker_spawn: "def(int spawn_index, int spawn_height) -> commands
+		conditional_sweeper_spawn: "def(int spawn_index, int spawn_height) -> commands
 			if(cycle - _phase_started_at = 50 * (spawn_index + 1),
-				spawn('mushroom_boss.seeker_projectile', spout_position(upper_right_stalk).x, spout_position(upper_right_stalk).y, facing, [
+				spawn('mushroom_boss.sweeper_projectile', spout_position(upper_right_stalk).x, spout_position(upper_right_stalk).y, facing, [
 					child.fly_to([
 							{x: spout_position(upper_right_stalk).x, y: spawn_height},
 						], def() child.fly_to([
@@ -681,7 +681,7 @@ properties: {
 				spawn_acid_rain_glob,
 				spore_cloud_setup,
 				spore_cloud_emit,
-				horizontal_seeker_attack,
+				horizontal_sweeper_attack,
 				bomber_shroom_drop,
 				idle,
 			}",
@@ -697,12 +697,14 @@ properties: {
 		
 	},
 	{
-		id: "seeker_projectile",
+		id: "sweeper_projectile",
 		prototype: ["seeker_flying"],
 		always_active: true,
 		solid_area: null,
 
 		properties: {
+			acquirable_item_drop_value: "int :: 0",
+
 			death_effects: "def(string type) -> commands [
 				play_death_effects('acid', enum small),
 				spawn('explosion_acid_big', mid_x, mid_y, 1),
