Made the mushroom boss's sweep attack also go from left to right.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -574,7 +574,7 @@ properties: {
 			map(seeker_heights, conditional_sweeper_spawn(index, value))
 		",
 		
-		conditional_sweeper_spawn: "def(int spawn_index, int spawn_height) -> commands
+		conditional_sweeper_spawn: "def(int spawn_index, int spawn_height) -> commands [
 			if(cycle - _phase_started_at = 50 * (spawn_index + 1),
 				spawn('mushroom_boss.sweeper_projectile', spout_position(upper_right_stalk).x, spout_position(upper_right_stalk).y, facing, [
 					child.fly_to([
@@ -585,8 +585,21 @@ properties: {
 						)
 					)
 				])
-			)
-		",			
+			),
+			
+			/* To keep the code comprehensible, we're doing a copy-paste to make the one that goes the other horizontal direction */
+			if(cycle - _phase_started_at = 50 * (spawn_index + 1),
+				spawn('mushroom_boss.sweeper_projectile', spout_position(upper_left_stalk).x, spout_position(upper_left_stalk).y, facing, [
+					child.fly_to([
+							{x: spout_position(upper_left_stalk).x, y: spawn_height},
+						], def() child.fly_to([
+							{x: spout_position(upper_right_stalk).x, y: spawn_height}
+						], def() child.force_death() 
+						)
+					)
+				])
+			),
+		]",			
 		
 #-------------------------- spore-cloud attack --------------------------#
 	/*
