Made the acid rain glob attack pass through solid terrain.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -494,7 +494,7 @@ properties: {
 									]",
 													
 	pick_random_behavior: "commands :: [
- 											switch(2, //_behavior_mode_prng.get_next_value,
+ 											switch(0, //_behavior_mode_prng.get_next_value,
  												0, ;	begin_spawn_acid_rain_glob,
  												1, ;	begin_spore_cloud_setup,
  												2, ;	begin_horizontal_sweeper_attack,
@@ -989,6 +989,7 @@ properties: {
 		},
 		
 		
+		on_collide_level: "null",
 		
 		on_create: "[
 			schedule(100, force_death()),
