Made the mushroom boss spawn some particles when launching the big acid-dropper shot.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -931,6 +931,7 @@ properties: {
 		
 		
 		on_create: "[
+			play_death_effects('acid', enum big),
 			spawn('legacy_particle_attache', mid_x, mid_y, {
 				_particle_type: 'acid_shot_contrail',
 				parent: me,
